--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,28 @@
     <string name="title_activity_settings">Settings</string>
     <string name="succesfull_logout">Logged out successfully!</string>
 
+    <string name="settings_change_language_title">Language</string>
+
+    <string-array name="languages_array_keys">
+        <item>English</item>
+        <item>Polish</item>
+    </string-array>
+    <string-array name="languages_array_values">
+        <item>en</item>
+        <item>pl</item>
+    </string-array>
+
+    <string name="settings_user_category">Account settings</string>
+    <string name="settings_general_category">General settings</string>
+
+    <string name="settings_change_password_title">Change password</string>
+    <string name="settings_delete_account_title">Delete account</string>
+    <string name="settings_passwords_differ">Entered passwords are different!</string>
+
+    <string name="preference_title_change_password">Change password</string>
+    <string name="settings_password_changed">Password changed successfully!</string>
+    <string name="settings_password_not_changed">Old password invalid!</string>
+
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
