--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -3,9 +3,9 @@
 
     <!-- Login -->
     <string name="login_hint">login</string>
-    <string name="password_hint">password</string>
-    <string name="signin_button">Sign In</string>
-    <string name="signup_link">Register</string>
+    <string name="password_hint">hasło</string>
+    <string name="signin_button">Zaloguj</string>
+    <string name="signup_link">Rejestracja</string>
 
     <string name="login_correct">Logged in successfully!</string>
     <string name="login_empty">You need to enter login and password!</string>
@@ -14,7 +14,7 @@
     <!-- Register -->
     <string name="register_login_hint">login</string>
     <string name="register_password_hint">password</string>
-    <string name="register_repassword_hint">confirm password</string>
+    <string name="register_repassword_hint">retype password</string>
     <string name="register_title">Registration</string>
     <string name="back_button">Back</string>
 
@@ -46,11 +46,6 @@
 
     <string name="settings_change_password_title">Change password</string>
     <string name="settings_delete_account_title">Delete account</string>
-
-    <string name="setting_old_password_hint">Old password</string>
-    <string name="setting_new_password_hint">New password</string>
-    <string name="setting_new2_password_hint">Confirm new password</string>
-
     <string name="settings_passwords_differ">Entered passwords are different!</string>
 
     <string name="preference_title_change_password">Change password</string>
