--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,8 +23,9 @@
 
     <!-- Main -->
 
-    <string name="menu_goto_do_odwiedzenia">To Visit</string>
-
+    <string name="to_visit_button">Places to Visit</string>
+    <string name="show_on_map_button">Show all on map</string>
+    <string name="add_new_place_button">Add new place</string>
     <!--Settings-->
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
@@ -70,5 +71,6 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_to_visit_map">Map</string>
     <string name="title_activity_to_visit_maps">Map</string>
+    <string name="title_activity_add_new_place_maps">Map</string>
 
 </resources>
