--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,14 +1,15 @@
 <resources>
-
     <!-- INTER-INTENT COMMUNICATION - ! DON'T LOCALISE !-->
     <string name="PLACE_TO_VISIT_TITLE">tim.project.travellerapp.PLACE_TO_VISIT_TITLE</string>
     <string name="PLACE_TO_VISIT_LOCALISATION">tim.project.travellerapp.PLACE_TO_VISIT_LOCALISATION</string>
 
     <string name="app_name">Traveller</string>
+    <string name="places_to_visit_toolbar">My places to visit</string>
+    <string name="visited_places_toolbar">My visited places</string>
 
     <!-- Login -->
     <string name="login_hint">login</string>
-    <string name="password_hint">hasło</string>
+    <string name="password_hint">password</string>
     <string name="signin_button">Sign In</string>
     <string name="signup_link">Register</string>
 
@@ -28,14 +29,14 @@
 
     <!-- Main -->
 
+    <string name="add_new_place_button">Add new place</string>
     <string name="to_visit_button">Places to visit</string>
     <string name="visited_button">Show my visited places</string>
-    <string name="show_on_map_button">Show all on map</string>
-    <string name="add_new_place_button">Add new place</string>
+    <string name="show_on_map_button">Show all places on map</string>
 
     <!--Places to visit -->
 
-    <string name="action_visited">Move to visited</string>
+    <string name="action_visited">Mark as visited</string>
     <string name="action_delete">Remove</string>
 
     <!--Visited Places -->
@@ -48,15 +49,17 @@
     <string name="title_activity_settings">Settings</string>
     <string name="succesfull_logout">Logged out successfully!</string>
 
-    <string name="settings_change_language_title">Language</string>
+    <string name="settings_change_traveling_method_title">Travelling method</string>
 
-    <string-array name="languages_array_keys">
-        <item>English</item>
-        <item>Polish</item>
+    <string-array name="travelling_method_keys">
+        <item>Driving</item>
+        <item>Bicycling</item>
+        <item>Walking</item>
     </string-array>
-    <string-array name="languages_array_values">
-        <item>en</item>
-        <item>pl</item>
+    <string-array name="travelling_method_values">
+        <item>d</item>
+        <item>b</item>
+        <item>w</item>
     </string-array>
 
     <string name="settings_user_category">Account settings</string>
